# pets

./: .coveragerc  CONTRIBUTING.rst  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
external_data/: wget-log
pets/: __init__.py  cohort.py  cohort_analyser_methods.py  commom_optparse.py  common_optparse.py  constants.py  evidence_profiler_methods.py  genomic_feature.py  genomic_features.py
pets/parsers/: cohort_parser.py  coord_parser.py  reference_parser.py
script_test/: evidence_profiler.sh  get_gen_features_test.sh  get_sorted_profs.sh  paco_tranlator_script_test.sh  profiles2phenopacket_script_test.sh
script_test/expected/get_gen_features/: patients_geneName.txt  single_case_geneName.txt
script_test/expected/paco_translator/: translated_default_file.txt  translated_paco_file.txt  untranslated_default_file.txt  untranslated_paco_file.txt
script_test/expected/profiles2phenopacket/: 105.json  106.json  126.json  127.json  128.json  129.json  130.json  131.json  132.json  133.json  135.json  138.json  139.json  140.json  141.json  147.json  184.json  221.json  306.json  308.json  309.json  310.json  311.json  313.json  314.json  318.json  321.json  323.json  523.json  578.json  589.json  595.json  596.json  597.json  607.json  608.json  610.json  611.json  613.json  614.json  (+35 more)
script_test/input_data/evidence_profiler/processed_data/: gene_coordinates
script_test/input_data/evidence_profiler/raw_data/: profile
script_test/input_data/evidence_profiler/raw_data/variants/: pat_174_raw
script_test/input_data/get_gene_features/: one_patient_one_feature.txt
script_test/input_data/get_sorted_profs/: pmm2_paco_format.txt  profile
script_test/input_data/paco_translator/: cohort_toy_dataset.txt
script_test/returned/paco_translator/: translated_paco_file.txt
script_test/returned/profiles2phenopacket/: 105.json  106.json  126.json  127.json  128.json  129.json  130.json  131.json  132.json  133.json  135.json  138.json  139.json  140.json  141.json  147.json  184.json  221.json  306.json  308.json  309.json  310.json  311.json  313.json  314.json  318.json  320.json  321.json  323.json  523.json  578.json  589.json  595.json  596.json  597.json  603.json  605.json  607.json  608.json  610.json  (+38 more)
src/pets/: __init__.py  cli_manager.py  cohort.py  cohort_analyser_methods.py  cons.py  genomic_features.py  genomic_prioritizer.py  io.py  main_modules.py  main_modules_advanced.py  pedigree_analysis.py  report_pets.py
src/pets/external_data/: disorder_classes  transform.py
src/pets/parsers/: cohort_parser.py  file_parser.py  reference_parser.py
src/pets/templates/: cluster_report.txt  cohort_report.txt  evidence_profile.txt  individual_prioreport.txt  inidividual_genomica_prioritizer.txt  integrated_by_patient_prioreport.txt  patient_report.txt  prioritizer_vs_prioritizer.txt  reg2phen_report.txt  similarity_matrix.txt
templates/: cluster_report.txt  cohort_report.txt  evidence_profile.txt  similarity_matrix.txt
test/: test_cohort.py  test_cohort_parser.py  test_coord_parser.py  test_genomic_feature.py  test_reference_parser.py
test/data/: 100_test_dataset.txt  100_test_dataset_with_sex.txt  cohort_toy_dataset.txt  cohort_toy_dataset_with_wrong_patient_data.txt  excluded.txt  get_table_with_sex.py  similarities.txt
test/data/ref_parser/: toy_example.gtf
tests/: conftest.py  test_cli_manager.py  test_cohort.py  test_cohort_parser.py  test_coord_parser.py  test_genomic_feature.py  test_reference_parser.py
tests/data/: coords_toy_dataset.txt
tests/data/ref_parser/: toy_example.gtf
tests/expected/collapse_terms/: collapsed_terms  collapsed_terms_just_leaves  collapsed_terms_uniq_parents
tests/expected/diseasome_generator/: diseasome  diseasome_analysis
tests/expected/filter_omim/: filtered_morbid_file
tests/expected/get_gen_features/: patients_ensemble.txt  single_case_ensemble.txt
tests/expected/paco_translator/: translated_default_file.txt  translated_paco_file.txt
tests/expected/profiles2phenopacket/: 132.json  599.json  647.json
tests/input_data/collapse_terms/: terms2collapse  terms2txt
tests/input_data/diseasome_generator/: diseases  diseasome
tests/input_data/evidence_profiler/: get_data.sh
tests/input_data/evidence_profiler/processed_data/: gene_coordinates_clean  gene_list  gene_phenotype
tests/input_data/evidence_profiler/raw_data/variants/: pat_174.tab
tests/input_data/filter_omim/: morbidmap.txt
tests/input_data/paco_translator/: cohort_toy_dataset.txt
tests/tmp/profile_evaluation/: file.csv
